# AI-Projects

./: README.md
agentic-rag/: .gitignore  langgraph.json  requirements.in  requirements.txt
agentic-rag/notebooks/: sample.ipynb
agentic-rag/src/agents/: sample.py
rag_agentico/: .env.example  .gitignore  README.md  pyproject.toml
rag_agentico/app/: main.py
rag_agentico/app/agents/: __init__.py  specialists.py
rag_agentico/app/api/: router.py
rag_agentico/app/api/routes/: chat.py
rag_agentico/app/core/: config.py  llm_factory.py
rag_agentico/app/graph/: router.py  state.py  workflow.py
rag_agentico/app/memory/: conversation_store.py
rag_agentico/app/models/: chat.py
rag_agentico/app/tools/: __init__.py  search.py
